<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">


    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ProgressBar
                    android:id="@+id/loader"
                    android:layout_width="match_parent"
                    android:foregroundGravity="center"
                    android:layout_height="match_parent"/>

            <TextView
                    android:id="@+id/txt_app_name"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <include layout="@layout/header_week"/>

            <TextView
                    android:id="@+id/txt_current_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    tools:text="Saturday, 1:16pm, Sunny"
                    android:textColor="@color/grey"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_region_name"/>

            <TextView
                    android:id="@+id/txt_average_temperature_current_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="72°"
                    android:textColor="@color/white"
                    android:textSize="112sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_current_day"/>

            <ImageView
                    android:id="@+id/img_weather_current_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintBottom_toBottomOf="@id/txt_average_temperature_current_day"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/txt_average_temperature_current_day"
                    tools:src="@drawable/ic_sun"
                    android:contentDescription="@string/icon_for_current_weather"/>

            <TextView
                    android:id="@+id/txt_low_temperature_current_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="62° low"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_average_temperature_current_day"/>

            <TextView
                    android:id="@+id/txt_high_temperature_current_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@id/txt_low_temperature_current_day"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toBottomOf="@id/txt_average_temperature_current_day"
                    tools:text="78° high"/>


            <TextView
                    android:id="@+id/txt_precipitation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    tools:text="0%"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/txt_precipitation_label"
                    app:layout_constraintStart_toStartOf="@+id/txt_precipitation_label"
                    app:layout_constraintTop_toBottomOf="@id/txt_low_temperature_current_day"/>

            <TextView
                    android:id="@+id/txt_precipitation_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precipitation"
                    android:textAllCaps="true"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toStartOf="@+id/txt_humidity_label"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_precipitation"/>

            <TextView
                    android:id="@+id/txt_humidity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    tools:text="20%"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/txt_humidity_label"
                    app:layout_constraintStart_toStartOf="@+id/txt_humidity_label"
                    app:layout_constraintTop_toBottomOf="@id/txt_low_temperature_current_day"/>


            <TextView
                    android:id="@+id/txt_humidity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textAllCaps="true"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toStartOf="@+id/txt_wind_label"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/txt_precipitation_label"
                    app:layout_constraintTop_toBottomOf="@id/txt_precipitation"/>

            <TextView
                    android:id="@+id/txt_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    tools:text="5mph"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/txt_wind_label"
                    app:layout_constraintStart_toStartOf="@+id/txt_wind_label"
                    app:layout_constraintTop_toBottomOf="@id/txt_low_temperature_current_day"/>


            <TextView
                    android:id="@+id/txt_wind_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind"
                    android:textAllCaps="true"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toStartOf="@+id/txt_uv_label"
                    app:layout_constraintStart_toEndOf="@+id/txt_humidity_label"
                    app:layout_constraintTop_toBottomOf="@id/txt_precipitation"/>

            <TextView
                    android:id="@+id/txt_uv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    tools:text="3"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/txt_uv_label"
                    app:layout_constraintStart_toStartOf="@+id/txt_uv_label"
                    app:layout_constraintTop_toBottomOf="@id/txt_low_temperature_current_day"/>

            <TextView
                    android:id="@+id/txt_uv_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uv"
                    android:textAllCaps="true"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/txt_wind_label"
                    app:layout_constraintTop_toBottomOf="@id/txt_precipitation"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/txt_label_next_day"
                    app:layout_constraintTop_toBottomOf="@id/txt_precipitation_label"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="24dp"
                    android:text="@string/next_days"
                    android:textStyle="italic"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_week"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_label_next_day"
                    tools:listitem="@layout/item_small_detail"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</ScrollView>